
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

	<modelVersion>4.0.0</modelVersion>
	<groupId>ca.rbon</groupId>
	<artifactId>iostream</artifactId>
	<version>0.9.3-SNAPSHOT</version>

	<name>${project.groupId}:${project.artifactId}</name>
	<description>Better ergonomics for Java IO stream handling</description>
	<url>https://github.com/fralalonde/iostream</url>

	<licenses>
		<license>
			<name>Mozilla Public License Version 2.0</name>
			<url>http://mozilla.org/MPL/2.0/</url>
		</license>
	</licenses>

	<developers>
		<developer>
			<name>Francis Lalonde</name>
			<email>fralalonde@gmail.com</email>
			<organization>ca.rbon</organization>
			<organizationUrl>https://github.com/fralalonde</organizationUrl>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:fralalonde/iostream.git</connection>
		<developerConnection>scm:git:git@github.com:fralalonde/iostream.git</developerConnection>
		<url>http://github.com/fralalonde/iostream/tree/master</url>
		<tag>HEAD</tag>
	</scm>

	<organization>
		<name>ca.rbon</name>
		<url>https://rbon.ca/</url>
	</organization>

	<properties>
		<!-- this project uses default methods -->
		<java.version>1.8</java.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>

	<distributionManagement>
		<snapshotRepository>
			<id>ossrh</id>
			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		</snapshotRepository>
	</distributionManagement>

	<dependencies>
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<version>1.18.2</version>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>2.15.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.assertj</groupId>
			<artifactId>assertj-core</artifactId>
			<version>3.8.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.6</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>24.0-jre</version>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
					<showDeprecation>true</showDeprecation>
					<compilerArgs>
						<!-- enable all default warnings -->
						<arg>-Xlint</arg>
						<!-- Verbose compiler messages -->
						<arg>-Xdiags:verbose</arg>
						<!-- treat warnings as errors : NOTE this is hard, javac is picky -->
						<arg>-Werror</arg>
						<!-- disable anachronic serialization warnings -->
						<arg>-Xlint:-serial</arg>
						<!-- disable misguided annotation warnings -->
						<arg>-Xlint:-processing</arg>
						<!-- disable warning about boostrap class path not set in conjunction 
							with -source 1.7 -->
						<arg>-Xlint:-options</arg>
						<!-- disable pedantic try-with-resource unreferenced warnings -->
						<arg>-Xlint:-try</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- enforce code style -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
				<version>3.0.0</version>
				<configuration>
					<configLocation>${basedir}/checkstyle.xml</configLocation>
					<encoding>UTF-8</encoding>
					<consoleOutput>true</consoleOutput>
					<linkXRef>false</linkXRef>
					<failsOnError>true</failsOnError>
					<includeTestSourceDirectory>true</includeTestSourceDirectory>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.4</version>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<phase>package</phase>
						<goals>
							<goal>javadoc</goal>
						</goals>
					</execution>
					<execution>
						<id>fix</id>
						<goals>
							<goal>fix</goal>
						</goals>
						<configuration>
							<level>public</level>
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>2.20.1</version>
				<configuration>
					<forkCount>0</forkCount>
				</configuration>
			</plugin>

			<!-- manages project version bumps, git tags and commits when going from 
				snapshot to release and back -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.5.3</version>
				<configuration>
					<tagNameFormat>${project.artifactId}-${project.version}</tagNameFormat>
					<autoVersionSubmodules>true</autoVersionSubmodules>
					<useReleaseProfile>false</useReleaseProfile>
					<releaseProfiles>release</releaseProfiles>
					<goals>deploy</goals>
					<!-- explicitly update the README.md with new release version -->
					<!-- does not work properly, find something else -->
					<!-- <preparationGoals>resources:copy-resources</preparationGoals> -->
				</configuration>
			</plugin>

			<!-- uploads maven releases and deployments to sonatype repo and then 
				maven central -->
			<plugin>
				<groupId>org.sonatype.plugins</groupId>
				<artifactId>nexus-staging-maven-plugin</artifactId>
				<version>1.6.8</version>
				<extensions>true</extensions>
				<configuration>
					<serverId>ossrh</serverId>
					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
					<autoReleaseAfterClose>true</autoReleaseAfterClose>
				</configuration>
			</plugin>

			<!-- code coverage executed by travis after build and uploaded to codecov -->
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.0</version>
				<executions>
					<execution>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<phase>test</phase>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>

	</build>

	<profiles>
		<profile>
			<!-- activated by using the mvn release:* goals -->
			<id>release</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-source-plugin</artifactId>
						<version>3.0.1</version>
						<executions>
							<execution>
								<id>attach-sources</id>
								<goals>
									<goal>jar-no-fork</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<!-- javadoc problems can fail a build, dont wait until release -->
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<version>2.10.4</version>
						<executions>
							<execution>
								<id>attach-javadocs</id>
								<goals>
									<goal>jar</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-gpg-plugin</artifactId>
						<version>1.6</version>
						<executions>
							<execution>
								<id>sign-artifacts</id>
								<phase>verify</phase>
								<goals>
									<goal>sign</goal>
								</goals>
							</execution>
						</executions>
					</plugin>

					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-site-plugin</artifactId>
						<version>3.6</version>
						<dependencies>
							<dependency>
								<groupId>org.tinyjee.dim</groupId>
								<artifactId>doxia-include-macro</artifactId>
								<version>1.1</version>
							</dependency>
							<dependency>
								<groupId>org.apache.maven.doxia</groupId>
								<artifactId>doxia-module-markdown</artifactId>
								<version>1.7</version>
							</dependency>
						</dependencies>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>
